# patroacore

./: Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml
core/: settings.py  urls.py
src/cases/: urls.py
src/cases/migrations/: 0001_initial.py
src/cases/models/: __init__.py  case_payment.py  case_structure.py
src/cases/serializers/: case.py
src/cases/views/: case.py
src/firms/: admin.py
src/users/: urls.py
src/users/migrations/: 0001_initial.py
src/users/models/: __init__.py  auth.py  manager.py
src/users/serializers/: auth.py
src/users/views/: auth.py  reset_password.py
